--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -22,7 +22,7 @@ jobs:
           server_port: 465
           username: ${{ secrets.MAIL_USERNAME }}
           password: ${{ secrets.MAIL_PASSWORD }}
-          subject: Jingzhou Weather Report (${{env.REPORT_DATE}})
+          subject: 荆州每日天气 (${{env.REPORT_DATE}})
           body: file://result.html
           to: ${{ secrets.MAIL_to }}
           from: 气象每日快报/JingZhou
