修正缩进写法
Warning: Unexpected input(s) 'Github来源ip', 'content_type', valid inputs are ['connection_url', 'server_address', 'server_port', 'secure', 'username', 'password', 'subject', 'to', 'from', 'body', 'html_body', 'cc', 'bcc', 'reply_to', 'in_reply_to', 'ignore_cert', 'convert_markdown', 'attachments', 'priority']

--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -29,7 +29,7 @@ jobs:
           password: ${{ secrets.MAIL_PASSWORD }}
           subject: 荆州每日天气 (${{env.REPORT_DATE}})
           body: |
-          Github来源ip: ${{ env.IP_ADDRESS }}
+            IP Address: ${{ env.IP_ADDRESS }}
             file://result.html
           to: ${{ secrets.MAIL_TO }}
           from: 气象每日快报/JingZhou
