--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -29,8 +29,8 @@ jobs:
           password: ${{ secrets.MAIL_PASSWORD }}
           subject: 荆州每日天气 (${{env.REPORT_DATE}})
           body: |
-            IP Address: ${{ env.IP_ADDRESS }}
-            file://result.html
+            Github来源ip: ${{ env.IP_ADDRESS }}
+            $(cat result.html)  # 添加这一行以将 result.html 文件内容添加到邮件正文中
           to: ${{ secrets.MAIL_TO }}
           from: 气象每日快报/JingZhou
           content_type: text/html
