重新测试并添加一些处理策略
先获取result.html并将ip使用>>方法写入一行内容，对ip内容添加一些判断,获取成功添加ip,获取失败添加ip获取失败

--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -11,15 +11,25 @@ jobs:
     steps:
       - name: 'Checkout codes'
         uses: actions/checkout@v1
-      - name: 'Get Weather'
-        run: bash ./weather.sh
-      - name: 'Get Date'
-        run: echo "REPORT_DATE=$(TZ=':Asia/Shanghai' date '+%Y-%m-%d %T')" >> $GITHUB_ENV
       - name: 'Get IP Address'
         run: |
           set +x
           echo "IP_ADDRESS=$(curl -s https://api64.ipify.org?format=json | jq -r '.ip')" >> $GITHUB_ENV
           set -x
+      - name: 'Get Weather'
+        run: bash ./weather.sh
+      - name: 'Get Date'
+        run: echo "REPORT_DATE=$(TZ=':Asia/Shanghai' date '+%Y-%m-%d %T')" >> $GITHUB_ENV
+      - name: '将 IP 地址写入到 result.html'
+        run: |
+          # 如果 IP 地址存在
+          if [ -n "${IP_ADDRESS}" ]; then
+            # 将 IP 地址追加写入到 result.html 文件
+            echo "Github ip: ${{ env.IP_ADDRESS }}" >> result.html
+          else
+            # 如果 IP 地址不存在，则写入一条相应的消息
+            echo "IP获取失败。" >> result.html
+          fi
       - name: 'Send mail'
         uses: dawidd6/action-send-mail@master
         with:
@@ -28,9 +38,7 @@ jobs:
           username: ${{ secrets.MAIL_USERNAME }}
           password: ${{ secrets.MAIL_PASSWORD }}
           subject: 荆州每日天气 (${{env.REPORT_DATE}})
-          body: |
-            Github来源ip: ${{ env.IP_ADDRESS }}
-            $(cat result.html)  # 添加这一行以将 result.html 文件内容添加到邮件正文中
+          body: file://result.html
           to: ${{ secrets.MAIL_TO }}
           from: 气象每日快报/JingZhou
           content_type: text/html
