--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,4 +1,3 @@
-#2024/06/12 07:29:13 GMT+08:00
 name: 'GitHub Actions Weather Bot'
 
 on:
@@ -13,16 +12,20 @@ jobs:
     steps:
       - name: 'Checkout codes'
         uses: actions/checkout@v1
+      
       - name: 'Get IP Address'
         run: |
           set +x
           echo "IP_ADDRESS=$(curl -s https://api64.ipify.org?format=json | jq -r '.ip')" >> $GITHUB_ENV
           set -x
+      
       - name: 'Get Weather'
         run: bash ./weather.sh
-        timeout-minutes: 2  # 如果执行时间超过2分钟，则取消执行
+        timeout-minutes: 10  # 如果执行时间超过十分钟，则取消执行
+      
       - name: 'Get Date'
         run: echo "REPORT_DATE=$(TZ=':Asia/Shanghai' date '+%Y-%m-%d %T')" >> $GITHUB_ENV
+      
       - name: '将 IP 地址写入到 result.html'
         run: |
           # 如果 IP 地址存在
@@ -30,9 +33,10 @@ jobs:
             # 将 IP 地址追加写入到 result.html 文件
             echo "Github ip: ${{ env.IP_ADDRESS }}" >> result.html
           else
-            # 如果IP地址不存在，则写入一条相应的消息
+            # 如果 IP 地址不存在，则写入一条相应的消息
             echo "IP获取失败。" >> result.html
           fi
+      
       - name: 'Send mail'
         uses: dawidd6/action-send-mail@master
         with:
@@ -40,7 +44,7 @@ jobs:
           server_port: 587
           username: ${{ secrets.MAIL_USERNAME }}
           password: ${{ secrets.MAIL_PASSWORD }}
-          subject: 荆州每日天气 (${{ env.REPORT_DATE }})
+          subject: 天气预报 - 北京/上海/武汉/杭州/伦敦 (${env.REPORT_DATE})
           body: file://result.html
           to: ${{ secrets.MAIL_TO }}
           from: 气象每日快报/JingZhou
