--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,3 +1,4 @@
+#2024/06/15 07:03:20 GMT+08:00
 name: 'GitHub Actions Weather Bot'
 
 on:
@@ -44,8 +45,8 @@ jobs:
           server_port: 587
           username: ${{ secrets.MAIL_USERNAME }}
           password: ${{ secrets.MAIL_PASSWORD }}
-          subject: 天气预报 - 北京/上海/武汉/杭州/伦敦 (${env.REPORT_DATE})
+          subject: 每日天气 (${{ env.REPORT_DATE }})
           body: file://result.html
           to: ${{ secrets.MAIL_TO }}
-          from: 气象每日快报/JingZhou
+          from: 气象快报
           content_type: text/html
